scrollbar correction

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -56,7 +56,8 @@ li {
     background-image: url(./img/jungle-background.png);
     background-repeat: no-repeat;
     background-size: cover;
-    min-height: 100vh;
+    /* min-height: 100vh; */
+    /* min-height: 810px; */
 }
 
 .top-shadow {
@@ -145,7 +146,6 @@ li a:hover {
     padding-left: 20px;
     padding-right: 20px;
     border: none;
-    font-family: Dela Gothic One;
     font-size: 16px;
     font-weight: 400;
     line-height: 23.17px;
@@ -202,16 +202,18 @@ li a:hover {
         right: 0;
     }
 
-    @media (min-width:768px) {
-        .d-md-none {
-            display: none;
-        }
+}
+
+@media (min-width:768px) {
+    .d-md-none {
+        display: none;
     }
 
-    li a:hover {
-        font-size: 18px;
-        text-shadow: 0 2px 5px #fff;
-    }
+li a:hover {
+    font-size: 18px;
+    text-shadow: 0 2px 5px #fff;
+}
+
 }
 
 @media (max-width:992px) {
